--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,10 +4,12 @@
 :root {
   scroll-behavior: smooth;
 }
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #555555;
 }
+
 body::before {
   content: "";
   position: fixed;
@@ -19,6 +21,7 @@ body::before {
   height: 100vh;
   z-index: -1;
 }
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -40,14 +43,16 @@ body::before {
   line-height: 25px;
   padding-right: 150px;
   text-shadow: rgb(198, 198, 198) -4px 1px;
-  
+
+
 }
-#hero span{
+
+#hero span {
   color: rgb(214, 0, 0);
   padding-left: 200px;
   text-shadow: rgb(120, 0, 0) -4px 1px;
-
 }
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -95,7 +100,7 @@ body::before {
   position: relative;
   text-align: center;
   margin: 5px;
- 
+
 }
 
 .navbar a,
@@ -108,52 +113,53 @@ body::before {
   transition: 0.3s;
 
   color: white;
-    text-decoration: none;
-    font-family: 'Space Grotesk', sans-serif;
-    
-    text-transform: uppercase;
-    letter-spacing: .1rem;
-    padding: 10px 30px;
-    background-color:#3b8525;
-    border-radius: 10px;
-  
-    box-shadow: 0 .5rem rgba(0, 0, 0, 0.415);
-    position: relative;
-    transition: all .35s ease-in-out;
-    margin: 10px;
-  
-  
+  text-decoration: none;
+  font-family: 'Space Grotesk', sans-serif;
+
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  padding: 10px 30px;
+  background-color: #a60101;
+  border-radius: 2px;
+
+  box-shadow: 0 .5rem rgba(0, 0, 0, 0.415);
+  position: relative;
+  transition: all .35s ease-in-out;
+  margin: 10px;
 }
+
 .navbar a::before {
   content: '';
   width: 100%;
   height: 0.5rem;
   display: block;
   position: absolute;
-  background-color: #4b9143;
-  border-radius: 10px 10px 0px 0px;
+  background-color: #a43636;
+  border-radius: 2px 2px 0px 0px;
   top: 0;
   left: 0;
   transition: all .25s ease-in-out;
 }
+
 .navbar a::after {
   content: '';
   width: 100%;
   height: 0.5rem;
   display: block;
   position: absolute;
-  background-color: #2e6b1e;
-  border-radius: 0px 0px 10px 10px;
+  background-color: #730f0f;
+  border-radius: 0px 0px 2px 2px;
   bottom: 0;
   left: 0;
   transition: all .1s ease-in-out;
 }
+
 .navbar a i,
 .navbar a:focus i {
   font-size: 12px;
   line-height: 0;
   margin-left: 5px;
-  
+
 }
 
 .navbar a:hover,
@@ -367,6 +373,7 @@ section {
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.734);
 }
+
 .section-header p {
   margin: 0 auto;
   color: var(--color-secondary-light);
@@ -377,6 +384,7 @@ section {
     max-width: 80%;
   }
 }
+
 /*--------------------------------------------------------------
 # Blog Home Posts List
 --------------------------------------------------------------*/
@@ -384,7 +392,7 @@ section {
   box-shadow: 0 4px 16px rgba(var(--color-black-rgb), 0.1);
   padding: 30px;
   height: 100%;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.911);
   border-radius: 10px;
 }
 
@@ -466,193 +474,11 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Blog Details Page
---------------------------------------------------------------*/
-.blog .blog-details {
-  box-shadow: 0 4px 16px rgba(var(--color-black-rgb), 0.1);
-  padding: 30px;
-}
-
-.blog .blog-details .post-img {
-  margin: -30px -30px 20px -30px;
-  overflow: hidden;
-}
-
-.blog .blog-details .title {
-  font-size: 28px;
-  font-weight: 700;
-  padding: 0;
-  margin: 20px 0 0 0;
-  color: var(--color-secondary);
-}
-
-.blog .blog-details .content {
-  margin-top: 20px;
-}
-
-.blog .blog-details .content h3 {
-  font-size: 22px;
-  margin-top: 30px;
-  font-weight: bold;
-}
-
-.blog .blog-details .content blockquote {
-  overflow: hidden;
-  background-color: rgba(var(--color-secondary-rgb), 0.06);
-  padding: 60px;
-  position: relative;
-  text-align: center;
-  margin: 20px 0;
-}
-
-.blog .blog-details .content blockquote p {
-  color: var(--color-default);
-  line-height: 1.6;
-  margin-bottom: 0;
-  font-style: italic;
-  font-weight: 500;
-  font-size: 22px;
-}
-
-.blog .blog-details .content blockquote:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 3px;
-  background-color: var(--color-secondary);
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.blog .blog-details .meta-top {
-  margin-top: 20px;
-  color: var(--color-gray);
-}
-
-.blog .blog-details .meta-top ul {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-}
-
-.blog .blog-details .meta-top ul li+li {
-  padding-left: 20px;
-}
-
-.blog .blog-details .meta-top i {
-  font-size: 16px;
-  margin-right: 8px;
-  line-height: 0;
-  color: rgba(var(--color-primary-rgb), 0.8);
-}
-
-.blog .blog-details .meta-top a {
-  color: var(--color-gray);
-  font-size: 14px;
-  display: inline-block;
-  line-height: 1;
-}
-
-.blog .blog-details .meta-bottom {
-  padding-top: 10px;
-  border-top: 1px solid rgba(var(--color-secondary-rgb), 0.15);
-}
-
-.blog .blog-details .meta-bottom i {
-  color: var(--color-secondary-light);
-  display: inline;
-}
-
-.blog .blog-details .meta-bottom a {
-  color: rgba(var(--color-secondary-rgb), 0.8);
-  transition: 0.3s;
-}
-
-.blog .blog-details .meta-bottom a:hover {
-  color: var(--color-primary);
-}
-
-.blog .blog-details .meta-bottom .cats {
-  list-style: none;
-  display: inline;
-  padding: 0 20px 0 0;
-  font-size: 14px;
-}
-
-.blog .blog-details .meta-bottom .cats li {
-  display: inline-block;
-}
-
-.blog .blog-details .meta-bottom .tags {
-  list-style: none;
-  display: inline;
-  padding: 0;
-  font-size: 14px;
-}
-
-.blog .blog-details .meta-bottom .tags li {
-  display: inline-block;
-}
-
-.blog .blog-details .meta-bottom .tags li+li::before {
-  padding-right: 6px;
-  color: var(--color-default);
-  content: ",";
-}
-
-.blog .blog-details .meta-bottom .share {
-  font-size: 16px;
-}
-
-.blog .blog-details .meta-bottom .share i {
-  padding-left: 5px;
-}
-
-.blog .post-author {
-  padding: 20px;
-  margin-top: 30px;
-  box-shadow: 0 4px 16px rgba(var(--color-black-rgb), 0.1);
-}
-
-.blog .post-author img {
-  max-width: 120px;
-  margin-right: 20px;
-}
-
-.blog .post-author h4 {
-  font-weight: 600;
-  font-size: 22px;
-  margin-bottom: 0px;
-  padding: 0;
-  color: var(--color-secondary);
-}
-
-.blog .post-author .social-links {
-  margin: 0 10px 10px 0;
-}
-
-.blog .post-author .social-links a {
-  color: rgba(var(--color-secondary-rgb), 0.5);
-  margin-right: 5px;
-}
-
-.blog .post-author p {
-  font-style: italic;
-  color: rgba(var(--color-gray-rgb), 0.8);
-  margin-bottom: 0;
-}
-
-/*--------------------------------------------------------------
 # Blog Sidebar
 --------------------------------------------------------------*/
 .blog .sidebar {
   padding: 30px;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.827);
   justify-content: center;
   border-radius: 10px;
 }
@@ -662,117 +488,60 @@ section {
   font-weight: 700;
   padding-top: 30px;
   padding-bottom: 30px;
-  color: black;
+  color: rgb(255, 255, 255);
 }
-.blog .sidebar h1{
-  color: black;
+
+.blog .sidebar h1 {
+  color: rgb(255, 255, 255);
+  font-weight: 800;
+  text-align: center;
+  font-size: 21px;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, #e44c4c 0%, #e7344b 57.96%, #ea1649 128.94%);
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  text-shadow: none;
+
+}
+.blog .sidebar h2{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: rgb(213, 213, 213);
+  font-weight: 800;
+  font-size: 15px;
+  padding-bottom: 15px;
+}
+.blog .sidebar h3{
+  text-align: center;
+  color: rgb(213, 213, 213);
   font-weight: 700;
-  text-align: left;
-  font-size: 25px;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-
+  font-size: 18px;
 }
-/*copy text*/
-.textBox
-{
-  height:300px;
-  width:300px;
+.blog .sidebar i{
+  color: white;
 }
 
-button{
-  height:50px;
-  width:100px;
-  font-size:15px;
-  font-family: 'Oswald', sans-serif;
-  
-  cursor:pointer;
-  background-color:rgb(255, 166, 0);
-  text-transform: uppercase;
-  border-color: white;
-  border-style: solid;
+button {
+  width: 40px;
+  height: 28px;
+  backdrop-filter: blur(4px);
+  background-color: rgba(216, 47, 40, 0.6);
+  color: #999999;
   border-radius: 10px;
+  border-color: #e44c4c;
+  align-items: center;
+  justify-content: center;
+  border-style: solid;
+  margin: 5px;
 }
-.ip-text{
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-  font-weight: 600;
-}
-  .ip-text span{
-    margin-right: 5px;
-  }
 
 .blog .sidebar .sidebar-item+.sidebar-item {
   margin-top: 40px;
 }
-
-.blog .sidebar .search-form form {
-  background: var(--color-white);
-  border: 1px solid rgba(var(--color-secondary-rgb), 0.3);
-  padding: 3px 10px;
-  position: relative;
-}
-
-.blog .sidebar .search-form form input[type=text] {
-  border: 0;
-  padding: 4px;
-  border-radius: 4px;
-  width: calc(100% - 40px);
-}
-
-.blog .sidebar .search-form form input[type=text]:focus {
-  outline: none;
-}
-
-.blog .sidebar .search-form form button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 15px;
-  margin: -1px;
-  background: var(--color-primary);
-  color: var(--color-white);
-  transition: 0.3s;
-  border-radius: 0 4px 4px 0;
-  line-height: 0;
-}
-
-.blog .sidebar .search-form form button i {
-  line-height: 0;
-}
-
-.blog .sidebar .search-form form button:hover {
-  background: rgba(var(--color-primary-rgb), 0.8);
-}
-
-.blog .sidebar .categories ul {
-  list-style: none;
-  padding: 0;
-}
-
-.blog .sidebar .categories ul li+li {
-  padding-top: 10px;
-}
-
-.blog .sidebar .categories ul a {
-  color: var(--color-secondary);
-  transition: 0.3s;
-}
-
-.blog .sidebar .categories ul a:hover {
-  color: var(--color-default);
-}
-
-.blog .sidebar .categories ul a span {
-  padding-left: 5px;
-  color: rgba(var(--color-default-rgb), 0.4);
-  font-size: 14px;
-}
-
 .blog .sidebar .recent-posts .post-item {
   display: flex;
 }
@@ -788,59 +557,17 @@ button{
 
 .blog .sidebar .recent-posts h4 {
   font-size: 18px;
-  font-weight: 400;
-}
-
-.blog .sidebar .recent-posts h4 a {
-  color: black;
-  text-decoration: none;
-  transition: 0.3s;
-}
-
-.blog .sidebar .recent-posts h4 a:hover {
-  color: var(--color-primary);
+  font-weight: 600;
+  color: white;
 }
 
 .blog .sidebar .recent-posts time {
   display: block;
   font-size: 14px;
-  color: rgba(var(--color-default-rgb), 0.4);
+  font-weight: 500;
+  color: #e44c4c;
 }
 
-.blog .sidebar .tags {
-  margin-bottom: -10px;
-}
-
-.blog .sidebar .tags ul {
-  list-style: none;
-  padding: 0;
-}
-
-.blog .sidebar .tags ul li {
-  display: inline-block;
-}
-
-.blog .sidebar .tags ul a {
-  color: var(--color-secondary-light);
-  font-size: 14px;
-  padding: 6px 14px;
-  margin: 0 6px 8px 0;
-  border: 1px solid rgba(var(--color-secondary-light-rgb), 0.8);
-  display: inline-block;
-  transition: 0.3s;
-}
-
-.blog .sidebar .tags ul a:hover {
-  color: var(--color-white);
-  border: 1px solid var(--color-primary);
-  background: var(--color-primary);
-}
-
-.blog .sidebar .tags ul a span {
-  padding-left: 5px;
-  color: rgba(var(--color-secondary-light-rgb), 0.8);
-  font-size: 14px;
-}
 /*--------------------------------------------------------------
 # Blog Home Pagination
 --------------------------------------------------------------*/
@@ -882,57 +609,67 @@ button{
 .blog .blog-pagination li:hover a {
   color: black;
 }
+
 /* 
 Frame Discord
 */
-iframe{
-  width: 342px; 
+iframe {
+  width: 342px;
   height: 350px;
   border-radius: 10px;
 }
+
 @media (max-width: 992px) {
   iframe {
     width: 295px;
     height: 400px;
     border-radius: 10px;
-    }
   }
+}
 
-  .avatar {
-    width: 32px;
-    height: 32px; 
-    overflow: hidden;
+.avatar {
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
 
-    }
-    .public{
-      padding-top: 20px;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-    ol, ul{
-      padding-left: 0 !important;
-    }
-    .public .author-name{
-      padding-right: 20px;
-    }
-    i{
-      width: 32px;
-      height: 32px;
-    }
-    .blog p{
-      text-align: justify;
-    }
-    /* Pie de pagina */
+}
+
+.public {
+  padding-top: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+ol,
+ul {
+  padding-left: 0 !important;
+}
+
+.public .author-name {
+  padding-right: 20px;
+}
+
+i {
+  width: 32px;
+  height: 32px;
+}
+
+.blog p {
+  text-align: justify;
+}
+
+/* Pie de pagina */
 #footer {
   background: #060606;
-  padding: 0 0 20px 0;
+  padding: 0 0 15px 0;
   color: #eee;
   font-size: 14px;
 }
+
 #footer .copyright {
   text-align: center;
-  padding-top: 20px;
+  padding-top: 15px;
 }
 
 #footer .credits {
@@ -947,4 +684,8 @@ iframe{
 
 #footer .credits a:hover {
   color: #f1f7ff;
+}
+
+padding-test {
+  padding-bottom: 100px;
 }
