--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -95,7 +95,7 @@ section {
 .navbar li {
   position: relative;
   text-align: center;
-  margin: 5px;
+  margin: 10px;
 
 }
 
@@ -143,6 +143,7 @@ section {
 .navbar li:hover>a {
   color: #fff;
   border-color: white;
+  filter: drop-shadow(1px 1px 5px #971f1f)
 }
 
 .navbar .getstarted,
@@ -459,6 +460,8 @@ iframe {
   width: 342px;
   height: 350px;
   border-radius: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 992px) {
@@ -466,7 +469,15 @@ iframe {
     width: 295px;
     height: 400px;
     border-radius: 10px;
+    justify-content: center;
+    align-items: center;
   }
+}
+
+.iframe-center {
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
 
 .avatar {
