--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,7 +25,14 @@ section {
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.884);
 }
-
+/*--------------------------------------------------------------
+# Disable AOS delay on mobile
+--------------------------------------------------------------*/
+@media screen and (max-width: 768px) {
+  [data-aos-delay] {
+    transition-delay: 0 !important;
+  }
+}
 /* Hero */
 #hero {
   width: 100%;
